@@ -1,2 +1,2 @@
 ivy.install.version=2.1.0
-version=1.8.3
+version=1.8.4
